# casa

./: .gitattributes  .gitignore  CLAUDE.md  README.md  STATUS.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MAIN_EXPERIMENT.md  PILOT_DESIGN.md  PILOT_RESULTS.md  PILOT_TASKS.md  RELATED_WORK.md  RESEARCH_PLAN.md
hooks/: pretooluse_guard.py  run.sh  settings.example.json  settings.example.windows.json  stop_audit.py
pilot/: run_sessions.py
pilot/analysis/: power.py  reaudit.py  w9_ability.py  w9_claims.py  w9_reexam.py
pilot/tasks/buggy-pipeline/: README.md  grade.py  prompt.txt  relevant_files.txt
pilot/tasks/config-parser/: README.md  grade.py  prompt.txt  relevant_files.txt
pilot/tasks/fee-calc/: README.md  grade.py  prompt.txt  relevant_files.txt
pilot/tasks/orbit-propagator/: README.md  grade.py  prompt.txt  relevant_files.txt
pilot/tasks/plugin-add/: README.md  canary_rules.yaml  grade.py  prompt.txt  (+1 more)
rules/: canary_rules.yaml  rules.example.yaml
scripts/: canary_claude_md.md
scripts/git-hooks/: pre-commit
src/casa/: __init__.py  audit.py  cli.py  metrics.py  report.py  rules.py  transcript.py
tests/: test_casa.py  test_config_parser_task.py  test_fee_calc_task.py  test_pilot_buggy_pipeline.py  test_pilot_orbit.py  test_pilot_plugin_add.py  test_pilot_rename_sweep.py  test_power.py  test_report.py  test_runner.py  test_shell_tools.py  test_stable_roots_task.py  test_trajectory.py  test_w9_analysis.py
tests/fixtures/: sample_session.jsonl
(+116 files in other folders)
