[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "casa"
version = "0.1.0"
description = "CASA — Coding Agent Session Auditor. Black-box behavioral auditing for Claude Code sessions: instruction compliance, exploration coverage, and session quality scoring from local transcripts and hooks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hyunmin Shim", email = "elecage@gmail.com" }]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
casa = "casa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
